test/types/scalar/kbrady/int_int16.chpl
writeln((-1:int(64)).safeCast(int(16)));
writeln((1:int(64)).safeCast(int(16)));
writeln(min(int(64)).safeCast(int(16)));
